--- a/AnimalShelter/Properties/launchSettings.json
+++ b/AnimalShelter/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:52665",
-      "sslPort": 44328
+      "applicationUrl": "http://localhost:38964",
+      "sslPort": 44331
     }
   },
   "profiles": {
-    "MessageBoardApi": {
+    "CretaceousApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:1992;http://localhost:2000",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
