Migration still not working, however can run application and swagger looks okay.

--- a/AnimalShelter/Properties/launchSettings.json
+++ b/AnimalShelter/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "CretaceousApi": {
+    "AnimalShelterApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
